T11/Z2/.gcc.out
/rhome/b/bkarovic1/workspace/UUP/T11/Z2/main.c: In function ‘main’:
/rhome/b/bkarovic1/workspace/UUP/T11/Z2/main.c:64:15: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
     else if (d==k.poluprecnik)
               ^~
/rhome/b/bkarovic1/workspace/UUP/T11/Z2/main.c:66:5: warning: this ‘else’ clause does not guard... [-Wmisleading-indentation]
     else
     ^~~~
/rhome/b/bkarovic1/workspace/UUP/T11/Z2/main.c:69:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
         printf("Obim kruznice: %.3f\n",obim_kruznice(k));
         ^~~~~~
/rhome/b/bkarovic1/workspace/UUP/T11/Z2/main.c:72:5: error: expected ‘;’ before ‘return’
     return 0;
     ^~~~~~
